--- a/3DSite/3DSite.csproj
+++ b/3DSite/3DSite.csproj
@@ -258,6 +258,7 @@
     <Content Include="Content\Models\Feisar_Ship.mtl" />
     <Content Include="Content\Models\Feisar_Ship.obj" />
     <Content Include="Content\Models\space_cruiser.obj" />
+    <Content Include="Content\Fonts\aurora.ttf" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\FlyControls.js" />
     <Content Include="Scripts\game.js" />
@@ -287,6 +288,7 @@
     <Content Include="Scripts\Specs\GameObjectSpec.js" />
     <Content Include="Scripts\Specs\ModelLoaderSpec.js" />
     <Content Include="Scripts\Specs\ModelLoadTestList.js" />
+    <Content Include="Scripts\ShipControls.js" />
     <Content Include="Scripts\three.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
