refactored gameobject and gamescreen classes. Merged mousepicker code into shipcontrols class.

--- a/3DSite/3DSite.csproj
+++ b/3DSite/3DSite.csproj
@@ -262,7 +262,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="Scripts\GameClasses\InputManager.js" />
     <Content Include="Scripts\GameClasses\PlayerShip.js" />
+    <Content Include="Scripts\Specs\PlayerShipSpec.js" />
     <Content Include="Scripts\Utilities\FlyControls.js" />
     <Content Include="Scripts\GameClasses\Game.js" />
     <Content Include="Scripts\GameClasses\GameObject.js" />
